--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 #spring.datasource.username=PROYECTO
 #spring.datasource.password=123456
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDiver
-spring.datasource.url=jdbc:oracle:thin:@//34.204.182.16:1521/ORCL
-spring.datasource.username=PROYECTO
-spring.datasource.password=123456
+server.port=0101
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+spring.datasource.username=LP
+spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
