--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 #spring.datasource.username=PROYECTO
 #spring.datasource.password=123456
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDiver
-server.port=0101
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
-spring.datasource.username=BD
-spring.datasource.password=123
+server.port=1313
+spring.datasource.url=jdbc:oracle:thin:@//bdsisra.cqj1q6j26rh9.us-east-1.rds.amazonaws.com:1521/orcl
+spring.datasource.username=General_SYSRA
+spring.datasource.password=123456
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
