--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 #spring.datasource.password=123456
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDiver
 server.port=1313
-spring.datasource.url=jdbc:oracle:thin:@//bdsisra.cqj1q6j26rh9.us-east-1.rds.amazonaws.com:1521/orcl
-spring.datasource.username=General_SYSRA
-spring.datasource.password=123456
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=LP
+spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
